new landing page layout with blue header

--- a/public/sites/all/themes/gesso/sass/partials/components/_button.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_button.scss
@@ -21,6 +21,10 @@
   @extend %button--white;
 }
 
+.button--orange {
+  @extend %button--orange;
+}
+
 .button--add { // has plus icon
   @extend %button--add;
 }
