--- a/public/sites/all/themes/gesso/css/styles.css
+++ b/public/sites/all/themes/gesso/css/styles.css
@@ -1338,52 +1338,6 @@ ul.panels-ipe-linkbar li {
 }
 
 @media (min-width: 43.75em) {
-  /* line 12, ../sass/partials/layout/panels/_landing-alt.scss */
-  .l-panels-landing-alt.main.sidebar .l-sidebar {
-    width: 20.58824%;
-    float: left;
-    margin-right: -100%;
-    margin-left: 0;
-    clear: none;
-  }
-  /* line 15, ../sass/partials/layout/panels/_landing-alt.scss */
-  .l-panels-landing-alt.main.sidebar .l-main {
-    width: 73.52941%;
-    float: right;
-    margin-left: 0;
-    margin-right: 0;
-    clear: none;
-  }
-}
-
-/* line 9, ../sass/partials/global/helpers/_clearfix.scss */
-.l-panels-landing-alt:after {
-  display: table;
-  content: "";
-}
-/* line 14, ../sass/partials/global/helpers/_clearfix.scss */
-.l-panels-landing-alt:after {
-  clear: both;
-}
-/* line 9, ../sass/partials/global/helpers/_clearfix.scss */
-.l-panels-landing-alt .l-preface:after,
-.l-panels-landing-alt .l-title:after,
-.l-panels-landing-alt .l-main:after,
-.l-panels-landing-alt .l-sidebar:after,
-.l-panels-landing-alt .l-wrapper:after {
-  display: table;
-  content: "";
-}
-/* line 14, ../sass/partials/global/helpers/_clearfix.scss */
-.l-panels-landing-alt .l-preface:after,
-.l-panels-landing-alt .l-title:after,
-.l-panels-landing-alt .l-main:after,
-.l-panels-landing-alt .l-sidebar:after,
-.l-panels-landing-alt .l-wrapper:after {
-  clear: both;
-}
-
-@media (min-width: 43.75em) {
   /* line 12, ../sass/partials/layout/panels/_landing.scss */
   .l-panels-landing.main.sidebar .l-sidebar {
     width: 20.58824%;
@@ -4751,7 +4705,7 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
   width: 0;
 }
 /* line 34, ../sass/partials/components/pane/_pane--landing-intro.scss */
-.region-landing-title--alt .pane--landing-intro:before {
+.section--wanteds .pane--landing-intro:before {
   border-color: #00729c transparent transparent transparent;
 }
 @media (min-width: 43.75em) {
@@ -5334,14 +5288,13 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
     z-index: 3;
   }
 }
-
-/* line 35, ../sass/partials/components/_region-landing-title.scss */
-.region-landing-title--alt {
+/* line 33, ../sass/partials/components/_region-landing-title.scss */
+.section--wanteds .region-landing-title {
   background: #00729c;
 }
 @media (min-width: 93.75em) {
-  /* line 38, ../sass/partials/components/_region-landing-title.scss */
-  .region-landing-title--alt:after {
+  /* line 36, ../sass/partials/components/_region-landing-title.scss */
+  .section--wanteds .region-landing-title:after {
     border-color: #025979 transparent transparent transparent;
   }
 }
