--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/wanteds-landing@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/wanteds-landing@inprogress.mustache
@@ -6,7 +6,7 @@
 
     <div class="l-panels-landing preface-empty title sidebar-empty main">
       <div class="l-preface layout-constrain"></div>
-      <div class="l-title region-landing-title region-landing-title--alt">
+      <div class="l-title region-landing-title">
         <div class="layout-constrain">
           {{> atoms-landing-page-intro-wanteds }}
         </div>
