changed section--wanteds class to section-wanteds

--- a/public/sites/all/themes/gesso/sass/partials/components/_region-landing-title.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_region-landing-title.scss
@@ -30,7 +30,7 @@
       z-index: 3;
     }    
   }
-  .section--wanteds & {
+  .section-wanteds & {
     background: #00729c;
     @include breakpoint(1500px, $no-query: true) {
       &:after {
