--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--landing-intro.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--landing-intro.scss
@@ -31,7 +31,7 @@
     border-width: 14px 14px 0 14px;
     bottom: -14px;
     border-color: $lightorange transparent transparent transparent;
-    .section--wanteds & { // blue header
+    .section-wanteds & { // blue header
       border-color: #00729c transparent transparent transparent;
     }
     height: 0;
