--- a/public/sites/all/themes/gesso/css/no-mq.css
+++ b/public/sites/all/themes/gesso/css/no-mq.css
@@ -4322,7 +4322,7 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
   margin-left: -14px;
 }
 /* line 34, ../sass/partials/components/pane/_pane--landing-intro.scss */
-.section--wanteds .pane--landing-intro:before {
+.section-wanteds .pane--landing-intro:before {
   border-color: #00729c transparent transparent transparent;
 }
 
@@ -4822,11 +4822,11 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
   z-index: 3;
 }
 /* line 33, ../sass/partials/components/_region-landing-title.scss */
-.section--wanteds .region-landing-title {
+.section-wanteds .region-landing-title {
   background: #00729c;
 }
 /* line 36, ../sass/partials/components/_region-landing-title.scss */
-.section--wanteds .region-landing-title:after {
+.section-wanteds .region-landing-title:after {
   border-color: #025979 transparent transparent transparent;
 }
 
