--- a/public/sites/all/themes/gesso/css/styles.css
+++ b/public/sites/all/themes/gesso/css/styles.css
@@ -4705,7 +4705,7 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
   width: 0;
 }
 /* line 34, ../sass/partials/components/pane/_pane--landing-intro.scss */
-.section--wanteds .pane--landing-intro:before {
+.section-wanteds .pane--landing-intro:before {
   border-color: #00729c transparent transparent transparent;
 }
 @media (min-width: 43.75em) {
@@ -5289,12 +5289,12 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
   }
 }
 /* line 33, ../sass/partials/components/_region-landing-title.scss */
-.section--wanteds .region-landing-title {
+.section-wanteds .region-landing-title {
   background: #00729c;
 }
 @media (min-width: 93.75em) {
   /* line 36, ../sass/partials/components/_region-landing-title.scss */
-  .section--wanteds .region-landing-title:after {
+  .section-wanteds .region-landing-title:after {
     border-color: #025979 transparent transparent transparent;
   }
 }
