styles for wanteds landing cards added to pattern lab

--- a/public/sites/all/themes/gesso/css/styles.css
+++ b/public/sites/all/themes/gesso/css/styles.css
@@ -25,12 +25,12 @@
 }
 
 /* line 9, ../sass/partials/global/helpers/_clearfix.scss */
-.clearfix:after, .layout-grid__row:after, .card__list--split:after, .field--funding-deadline:after, .pane--homepage-views-personas-pane .pane__content .view--homepage-views:after, .pane--landing-intro:after, .quicktabs-tabs.quicktabs-style-nostyle:after, .region-footer:after, .view__header:after, .view--homepage-cardflip:after {
+.clearfix:after, .layout-grid__row:after, .card__list--split:after, .field--funding-deadline:after, .pane--homepage-views-personas-pane .pane__content .view--homepage-views:after, .pane--landing-intro:after, .quicktabs-tabs.quicktabs-style-nostyle:after, .region-footer:after, .view__header:after, .view--homepage-cardflip:after, .view--wanteds-cardflip:after {
   display: table;
   content: "";
 }
 /* line 14, ../sass/partials/global/helpers/_clearfix.scss */
-.clearfix:after, .layout-grid__row:after, .card__list--split:after, .field--funding-deadline:after, .pane--homepage-views-personas-pane .pane__content .view--homepage-views:after, .pane--landing-intro:after, .quicktabs-tabs.quicktabs-style-nostyle:after, .region-footer:after, .view__header:after, .view--homepage-cardflip:after {
+.clearfix:after, .layout-grid__row:after, .card__list--split:after, .field--funding-deadline:after, .pane--homepage-views-personas-pane .pane__content .view--homepage-views:after, .pane--landing-intro:after, .quicktabs-tabs.quicktabs-style-nostyle:after, .region-footer:after, .view__header:after, .view--homepage-cardflip:after, .view--wanteds-cardflip:after {
   clear: both;
 }
 
@@ -2259,7 +2259,7 @@ input.throbbing {
   -moz-perspective: 800px;
   -webkit-perspective: 800px;
   perspective: 800px;
-  min-height: 200px;
+  min-height: 180px;
   position: relative;
   width: 100%;
   z-index: 0;
@@ -2276,7 +2276,7 @@ input.throbbing {
 /* line 19, ../sass/partials/components/_cardflip.scss */
 .cardflip__card {
   color: #fff;
-  min-height: 200px;
+  min-height: 180px;
   left: 0;
   position: absolute;
   text-align: center;
@@ -2325,15 +2325,11 @@ input.throbbing {
 }
 
 /* line 51, ../sass/partials/components/_cardflip.scss */
-.cardflip__a, .cardflip__b {
+.cardflip__a, .cardflip__b, .cardflip__1, .cardflip__2 {
   -moz-backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  border: 1px solid #eee;
-  -moz-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
-  min-height: 200px;
+  min-height: 180px;
   left: 0;
   padding: 20px;
   position: absolute;
@@ -2346,23 +2342,21 @@ input.throbbing {
   width: 100%;
 }
 
-/* line 64, ../sass/partials/components/_cardflip.scss */
-.cardflip__a {
-  background: #ed7d3a;
+/* line 62, ../sass/partials/components/_cardflip.scss */
+.cardflip__a, .cardflip__1 {
   z-index: 0;
 }
 
-/* line 70, ../sass/partials/components/_cardflip.scss */
-.cardflip__b {
-  background: #dc5606;
+/* line 66, ../sass/partials/components/_cardflip.scss */
+.cardflip__b, .cardflip__2 {
   -moz-transform: rotateY(180deg);
   -ms-transform: rotateY(180deg);
   -o-transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
-/* line 74, ../sass/partials/components/_cardflip.scss */
-.no-transformstylepreserve3d .cardflip__b {
+/* line 68, ../sass/partials/components/_cardflip.scss */
+.no-transformstylepreserve3d .cardflip__b, .no-transformstylepreserve3d .cardflip__2 {
   -moz-transform: none;
   -ms-transform: none;
   -o-transform: none;
@@ -2374,38 +2368,134 @@ input.throbbing {
   -webkit-transition: top 0.5s linear;
   transition: top 0.5s linear;
 }
-/* line 79, ../sass/partials/components/_cardflip.scss */
-.no-transformstylepreserve3d .cardflip:hover .cardflip__b, .no-transformstylepreserve3d .cardflip:focus .cardflip__b, .no-transformstylepreserve3d .cardflip.is-flipped .cardflip__b {
+/* line 73, ../sass/partials/components/_cardflip.scss */
+.no-transformstylepreserve3d .cardflip:hover .cardflip__b, .no-transformstylepreserve3d .cardflip:hover .cardflip__2, .no-transformstylepreserve3d .cardflip:focus .cardflip__b, .no-transformstylepreserve3d .cardflip:focus .cardflip__2, .no-transformstylepreserve3d .cardflip.is-flipped .cardflip__b, .no-transformstylepreserve3d .cardflip.is-flipped .cardflip__2 {
   top: 0;
 }
 
-/* line 86, ../sass/partials/components/_cardflip.scss */
+/* line 80, ../sass/partials/components/_cardflip.scss */
+.cardflip__a {
+  -moz-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+  background: #ed7d3a;
+  border: 1px solid #eee;
+}
+
+/* line 89, ../sass/partials/components/_cardflip.scss */
+.cardflip__b {
+  -moz-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+  background: #dc5606;
+  border: 1px solid #eee;
+}
+
+/* line 98, ../sass/partials/components/_cardflip.scss */
+.cardflip__1 {
+  max-height: 180px;
+  max-width: 275px;
+}
+
+/* line 105, ../sass/partials/components/_cardflip.scss */
+.cardflip__2 {
+  max-height: 180px;
+  max-width: 275px;
+  text-align: left;
+}
+
+/* line 113, ../sass/partials/components/_cardflip.scss */
 .cardflip__title {
   -moz-hyphens: none;
   -ms-hyphens: none;
   -webkit-hyphens: none;
   hyphens: none;
-  font-size: 1.3125em;
+  font-size: 21px;
 }
-/* line 89, ../sass/partials/components/_cardflip.scss */
+/* line 116, ../sass/partials/components/_cardflip.scss */
 .cardflip__a .cardflip__title {
   min-height: 60px;
 }
-/* line 92, ../sass/partials/components/_cardflip.scss */
+/* line 119, ../sass/partials/components/_cardflip.scss */
 .cardflip__b .cardflip__title {
   border-bottom: 1px solid #fff;
   margin-bottom: 1em;
   padding-bottom: 1em;
 }
+/* line 124, ../sass/partials/components/_cardflip.scss */
+.cardflip__1 .cardflip__title {
+  left: 0;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  text-transform: uppercase;
+  top: 50%;
+  z-index: 3;
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+/* line 134, ../sass/partials/components/_cardflip.scss */
+.cardflip__2 .cardflip__title {
+  font-size: 13px;
+  margin-bottom: 0.5em;
+  position: relative;
+  text-transform: uppercase;
+  z-index: 3;
+}
 
-/* line 103, ../sass/partials/components/_cardflip.scss */
+/* line 144, ../sass/partials/components/_cardflip.scss */
+.cardflip__1 .cardflip__image, .cardflip__2 .cardflip__image {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 1;
+}
+/* line 152, ../sass/partials/components/_cardflip.scss */
+.cardflip__2 .cardflip__image:after {
+  background: rgba(237, 125, 58, 0.8);
+  bottom: 0;
+  content: "";
+  display: block;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 2;
+}
+
+/* line 166, ../sass/partials/components/_cardflip.scss */
+.cardflip__2 .cardflip__description {
+  font-size: 18px;
+  line-height: 1.1;
+  position: relative;
+  z-index: 3;
+}
+
+/* line 174, ../sass/partials/components/_cardflip.scss */
 .cardflip__link {
-  font-size: 0.875em;
+  font-size: 14px;
   padding-top: 1em;
 }
-/* line 106, ../sass/partials/components/_cardflip.scss */
+/* line 177, ../sass/partials/components/_cardflip.scss */
 .cardflip__link a {
   text-decoration: underline;
+}
+/* line 180, ../sass/partials/components/_cardflip.scss */
+.cardflip__2 .cardflip__link {
+  font-size: 16px;
+  padding-top: 1.5em;
+  position: relative;
+  text-transform: uppercase;
+  z-index: 3;
+}
+/* line 186, ../sass/partials/components/_cardflip.scss */
+.cardflip__2 .cardflip__link a {
+  text-decoration: none;
 }
 
 /* line 1, ../sass/partials/components/_comment.scss */
@@ -6625,6 +6715,49 @@ aside .view__all, .region-footer .view__all {
   display: block;
   height: 150%;
   width: 0;
+}
+
+/* line 1, ../sass/partials/components/view/_view--wanteds-cardflip.scss */
+.view--wanteds-cardflip {
+  font-size: 0px;
+  line-height: 0;
+  margin: 0;
+  text-align: center;
+}
+/* line 7, ../sass/partials/components/view/_view--wanteds-cardflip.scss */
+.view--wanteds-cardflip .views-row {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 1.3;
+  max-width: 275px;
+  padding: 0;
+  width: 100%;
+  -moz-perspective: 800px;
+  -webkit-perspective: 800px;
+  perspective: 800px;
+  -moz-transform: translate3d(0px, 0px, 0px);
+  -ms-transform: translate3d(0px, 0px, 0px);
+  -o-transform: translate3d(0px, 0px, 0px);
+  -webkit-transform: translate3d(0px, 0px, 0px);
+  transform: translate3d(0px, 0px, 0px);
+}
+@media (min-width: 36.25em) {
+  /* line 7, ../sass/partials/components/view/_view--wanteds-cardflip.scss */
+  .view--wanteds-cardflip .views-row {
+    width: 50%;
+  }
+}
+@media (min-width: 53.75em) {
+  /* line 7, ../sass/partials/components/view/_view--wanteds-cardflip.scss */
+  .view--wanteds-cardflip .views-row {
+    width: 33.33333%;
+  }
+}
+@media (min-width: 70.625em) {
+  /* line 7, ../sass/partials/components/view/_view--wanteds-cardflip.scss */
+  .view--wanteds-cardflip .views-row {
+    width: 25%;
+  }
 }
 
 /* line 6, ../sass/partials/components/_views-widget.scss */
