--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/wanteds-landing@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/wanteds-landing@inprogress.mustache
@@ -15,7 +15,7 @@
         <div class="layout-constrain">
           
           <div class="l-main">
-            Content
+            {{> molecules-wanteds-action-card-panes }}
           </div>
 
         </div>
