--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-landing/03-templates-wanteds-landing.mustache
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-landing/03-templates-wanteds-landing.mustache
@@ -15,7 +15,7 @@
         &lt;div class=&quot;layout-constrain&quot;&gt;
           
           &lt;div class=&quot;l-main&quot;&gt;
-            Content
+            {{&gt; molecules-wanteds-action-card-panes }}
           &lt;/div&gt;
 
         &lt;/div&gt;
