--- a/public/sites/all/themes/gesso/sass/partials/components/_card.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_card.scss
@@ -7,6 +7,8 @@
   position: relative;
 }
 
+.card__meta {}
+
 .card__type {
   font-size: em($font-size-sm);
   text-transform: uppercase;
@@ -165,8 +167,32 @@
   }
 }
 
+.card__location { 
+  font-size: em(14px);
+  &:before {
+    @include image-replace(12px,16px);
+    @include svg-background(map-pin);
+    content: "";
+    display: inline-block;
+    margin-right: 8px;
+    position: relative;
+    top: 2px;
+  }
+}
+
+.card__summary {
+  p {
+    margin: 0 0 0.5em 0;
+    &:last-child {
+      margin: 0;
+    }
+  }
+}
+
 %cardicon {
   content: "";
+  background-position: 50% 100%;
+  background-repeat: no-repeat;
   display: block;
   margin-bottom: 3px;
   position: relative;
@@ -183,6 +209,18 @@
   right: 0;
   text-align: center;
   width: 100%;
+  .card--listing & { // listing view mode
+    border-top: 1px solid $border-color;
+    bottom: auto;
+    left: auto;
+    overflow: visible;
+    margin: 10px 0 0 0;
+    padding: 10px 0 0 0;
+    position: static;
+    right: auto;
+    text-align: left;
+    width: auto;
+  }
   > .view {
     display: inline-block;
     font-size: em(12px);
@@ -191,35 +229,46 @@
     min-width: 25px;
     padding: 0 4%;
     text-align: center;
+    .card--listing & { // listing view mode
+      min-width: 35px;
+      padding: 0;
+      &:first-child {
+        padding-left: 0;
+      }
+    }
     .has-icon--comment {
       &:before {
         @extend %cardicon;
-        @include image-replace(20px,17px);
+        @include image-replace(20px,20px);
         @include svg-background(icon-comment-20-17-blue); 
+        background-size: 20px 17px;
         margin-left: -10px; // half of width
       }
     }
     .has-icon--resource {
       &:before {
         @extend %cardicon;
-        @include image-replace(19px,17px);
+        @include image-replace(19px,20px);
         @include svg-background(icon-resource-19-17-blue);
+        background-size: 19px 17px;
         margin-left: -9px; // half of width
       }
     }
     .has-icon--camera {
       &:before {
         @extend %cardicon;
-        @include image-replace(23px,17px);
+        @include image-replace(23px,20px);
         @include svg-background(icon-photo-23-17-blue);
+        background-size: 23px 17px;
         margin-left: -11px; // half of width
       }
     }
     .has-icon--favorite {
       &:before {
         @extend %cardicon;
-        @include image-replace(18px,17px);
+        @include image-replace(18px,20px);
         @include svg-background(icon-favorite-18-17-blue);
+        background-size: 18px 17px;
         margin-left: -9px; // half of width
       }
     }
@@ -228,29 +277,32 @@
         @extend %cardicon;
         @include image-replace(20px,20px);
         @include svg-background(icon-funding-20-20-blue);
+        background-size: 20px 20px;
         margin-left: -10px; // half of width
       }
     }
     .has-icon--member {
       &:before {
         @extend %cardicon;
-        @include image-replace(17px,17px);
+        @include image-replace(17px,20px);
         @include svg-background(icon-member-17-17-blue);
+        background-size: 17px 17px;
         margin-left: -8px; // half of width
       }
     }
     .has-icon--organization { 
       &:before {
         @extend %cardicon;
-        @include image-replace(17px,17px);
+        @include image-replace(17px,20px);
         @include svg-background(icon-organization-17-17-blue);
+        background-size: 17px 17px;
         margin-left: -8px; // half of width 
       }
     }
     .has-icon--evidence {
       &:before {
         @extend %cardicon;
-        @include image-replace(15px,17px);
+        @include image-replace(15px,20px);
         @include svg-background(icon-evidence-15-17-blue);
         margin-left: -8px; // half of width
       }
@@ -266,7 +318,7 @@
     .has-icon--assistance {
       &:before {
         @extend %cardicon;
-        @include image-replace(17px,17px);
+        @include image-replace(17px,20px);
         @include svg-background(icon-assistance-17-17-blue);
         margin-left: -8px; // half of width
       }
@@ -300,5 +352,35 @@
     margin: 0 16px;
     overflow: hidden;
     padding: 10px 0;
+  }
+}
+
+.card--listing { // listing view mode
+  background: none;
+  border: 0;
+  @include box-shadow(none);
+  margin: 0;
+  max-width: none;
+  padding: 0 0 1em 0;
+  position: static;
+  .card__meta {
+    @extend %clearfix;
+    line-height: 22px;
+    padding-bottom: 0.5em;
+  }
+  .card__type {
+    border-right: 1px solid $border-color;
+    float: left;
+    margin-right: 10px;
+    padding-right: 10px;
+    &:last-child {
+      border-right: 0;
+    }
+  }
+  .card__location {
+    float: left;
+  }
+  .layout-slat__media {
+    max-width: 200px;
   }
 }
