--- a/public/sites/all/themes/gesso/sass/partials/components/_cardflip.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_cardflip.scss
@@ -185,6 +185,9 @@ $cardheight: 180px;
     z-index: 3;
     a {
       text-decoration: none;
+      &:hover, &:focus {
+        text-decoration: underline;
+      }
     }
   }
 }
