--- a/public/sites/all/themes/gesso/css/no-mq.css
+++ b/public/sites/all/themes/gesso/css/no-mq.css
@@ -4489,7 +4489,7 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
   -ms-hyphens: none;
   hyphens: none;
   margin: 0;
-  padding: 25px 0 0 0;
+  padding: 25px 0 20px 0;
   background: url(../images/intro_background2.png) no-repeat 100% 10px;
   min-height: 200px;
   padding: 70px 0 20px 0;
@@ -4715,6 +4715,10 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
 .pane--landing-intro__right p {
   margin: 0;
   text-align: right;
+}
+/* line 215, ../sass/partials/components/pane/_pane--landing-intro.scss */
+.pane--landing-intro__right .button {
+  margin-bottom: 10px;
 }
 
 /* line 2, ../sass/partials/components/pane/_pane--nodefield-funding-desc.scss */
@@ -5301,6 +5305,12 @@ tr.drag-previous {
 /* line 12, ../sass/partials/components/_throbber.scss */
 .ajax-progress-throbber {
   display: inline-block;
+}
+
+/* line 1, ../sass/partials/components/_toggle-text.scss */
+.toggle-text {
+  display: none;
+  line-height: 1.3;
 }
 
 /* line 1, ../sass/partials/components/_user-header.scss */
