--- a/public/sites/all/themes/gesso/css/styles.css
+++ b/public/sites/all/themes/gesso/css/styles.css
@@ -4872,7 +4872,7 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
   -webkit-hyphens: none;
   hyphens: none;
   margin: 0;
-  padding: 25px 0 0 0;
+  padding: 25px 0 20px 0;
   position: relative;
   z-index: 2;
 }
@@ -5153,6 +5153,10 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
 .pane--landing-intro__right p {
   margin: 0;
   text-align: right;
+}
+/* line 215, ../sass/partials/components/pane/_pane--landing-intro.scss */
+.pane--landing-intro__right .button {
+  margin-bottom: 10px;
 }
 
 /* line 2, ../sass/partials/components/pane/_pane--nodefield-funding-desc.scss */
@@ -5810,6 +5814,12 @@ tr.drag-previous {
 /* line 12, ../sass/partials/components/_throbber.scss */
 .ajax-progress-throbber {
   display: inline-block;
+}
+
+/* line 1, ../sass/partials/components/_toggle-text.scss */
+.toggle-text {
+  display: none;
+  line-height: 1.3;
 }
 
 /* line 1, ../sass/partials/components/_user-header.scss */
