--- a/public/sites/all/themes/gesso/sass/partials/components/_region-title.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_region-title.scss
@@ -1,5 +1,8 @@
 .region-title {
   background: $lightorange;
+  .section-wanteds & {
+    background: #00729c;
+  }
   margin: 0 0 3em 0;
   @include breakpoint(1200px, $no-query: true) {
     position: relative;
@@ -11,6 +14,9 @@
       border-style: solid;
       border-width: 105px 70px 0 0;
       border-color: $orange transparent transparent transparent;
+      .section-wanteds & {
+        border-color: #025979 transparent transparent transparent;
+      }
       height: 0;
       left: 0;
       position: absolute;
