--- a/public/sites/all/themes/gesso/sass/partials/components/nav/_nav--mobile-menu.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/nav/_nav--mobile-menu.scss
@@ -60,17 +60,18 @@
     background-color: transparent;
     border: 0;
     color: $mobile-menu-text-color;
-    display: block;
+    display: inline-block;
     font-family: $mobile-menu-font-family;
     font-size: $font-size-lg;
     font-weight: bold;
     line-height: 1.25;
     margin: 0;
     padding: 0.75em 1.25em 0.75em 2em;
+    position: relative;
     text-align: left;
     text-decoration: none;
     white-space: normal;
-    width: 100%;
+    z-index: 1;
   }
 
   .nav__subnav-arrow,
