--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_quotes.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_quotes.scss
@@ -5,13 +5,14 @@ blockquote {
 	// 
 	p{
 		&:before{
-			@include circleicon(20, $lightred);
+			content:”\201C”;
+			color: #FFF;
+			display: block;
+			background: red;
+			padding: 30px;
+			// @include circleicon(20, $lightred);
 		}
 		
-		// content:”\201C”;
-		// color: #FFF;
-		// display: block;
-		// background: red;
-		// padding: 30px;
+		
 	}
 }
