Resolve class name issue in mobil menu js. Styling for wanteds search bar

--- a/public/sites/all/themes/gesso/sass/partials/global/variables/_colors.scss
+++ b/public/sites/all/themes/gesso/sass/partials/global/variables/_colors.scss
@@ -8,6 +8,7 @@ $orange: #dc5606;
 $lightorange: #ed7d3a;
 $red: #b71234;
 $gray: #f8f8f8;
+$smoke: #e6eaf0;
 
 $primary-text-color: #565a5c;
 $secondary-text-color: #666;
@@ -18,7 +19,7 @@ $link-hover-color: darken($orange,10%);
 $selection-background: blue;
 $selection-foreground: #fff;
 $status-color: #4d8e4d;
-$warning-color: #fcce00; 
+$warning-color: #fcce00;
 $error-color: #900;
 $border-color: #cecfcb;
 $gradient-light: rgba(255, 255, 255, 0.2);
