--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/03-navigation/01-main-menu@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/03-navigation/01-main-menu@inprogress.mustache
@@ -29,12 +29,48 @@
         </div>
       </li>
       <!-- FUNDING -->
-      <li class="tb-megamenu-item level-1 mega tb-megamenu-item--funding">
+      <li class="tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown">
         <a href="#"> Funding </a>
+        <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
+          <div class="mega-dropdown-inner">
+            <div class="tb-megamenu-row row-fluid">
+              <div class="tb-megamenu-column span12 mega-col-nav" data-width="12">
+                <div class="tb-megamenu-column-inner mega-inner clearfix">
+                  <div class="tb-megamenu-block tb-block tb-megamenu-block">
+                    <div class="block-inner">
+                      <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
+                        <a class="tb-megamenu-big-button has-icon-funding" href="#">Browse all Funding Opportunities</a>
+                        <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Funding Opportunity</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div
       </li>
       <!-- RESOURCES -->
-      <li class="tb-megamenu-item level-1 mega tb-megamenu-item--resources">
+      <li class="tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown">
         <a href="#"> Resources </a>
+        <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
+          <div class="mega-dropdown-inner">
+            <div class="tb-megamenu-row row-fluid">
+              <div class="tb-megamenu-column span12 mega-col-nav" data-width="12">
+                <div class="tb-megamenu-column-inner mega-inner clearfix">
+                  <div class="tb-megamenu-block tb-block tb-megamenu-block">
+                    <div class="block-inner">
+                      <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
+                        <a class="tb-megamenu-big-button has-icon-resources" href="#">Browse all Resources</a>
+                        <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Resource</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </li>
       <!-- ENGINES -->
       <li class="tb-megamenu-item level-1 mega tb-megamenu-item--communities mega-align-right dropdown">
